apps/testing-06-07/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: testing-06-07
  namespace: dev
  labels:
    backstage.io/kubernetes-id: testing-06-07
spec:
  selector:
    app: testing-06-07
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
