apps/testing-06-07/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: testing-06-07
  namespace: dev
  labels:
    backstage.io/kubernetes-id: testing-06-07
    environment: dev
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /testing-06-07-dev(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: testing-06-07
                port:
                  number: 80
